First draft of paper

--- a/writeup/final_writeup.bib
+++ b/writeup/final_writeup.bib
@@ -32,3 +32,16 @@
     year = {1973},
     pages = {256-278}
 }
+
+@inproceedings{POS-14:New_CNF_Features_and_Formula_Classification,
+  author    = {Enrique Alfonso and Norbert Manthey},
+  title     = {New CNF Features and Formula Classification},
+  booktitle = {POS-14. Fifth Pragmatics of SAT workshop},
+  editor    = {Daniel Le Berre},
+  series    = {EPiC Series in Computing},
+  volume    = {27},
+  pages     = {57-71},
+  year      = {2014},
+  publisher = {EasyChair},
+  bibsource = {EasyChair, http://www.easychair.org},
+  issn      = {2040-557X}}
