Minor writeup modifications

--- a/writeup/final_writeup.tex
+++ b/writeup/final_writeup.tex
@@ -174,10 +174,10 @@ The second results that we look at are across different values of $k$, since all
 \begin{figure}[ht]
 \vspace{-0.1in}
 \centerline{
-\subfigure[$detlp\_sat$]{
+\subfigure{
 	\includegraphics[scale=0.45]{fig/fixedk/average}
 }
-\subfigure[$average\_sat$]{
+\subfigure{
     \includegraphics[scale=0.45]{fig/fixedk/variance}
 }
 }
