Final draft of writeup

--- a/writeup/final_writeup.tex
+++ b/writeup/final_writeup.tex
@@ -92,11 +92,11 @@ The derandomized algorithm is actually just an application of the method of cond
 
 \subsection{(3/4) Stochastic MAX SAT ($randlp\_sat$)}
 
-The third algorithm we implemented was actually one that we proved to be an expected $3/4$ approximation to MAX SAT in homework three.  The algorithm essentially took advantage of a linear program to compute a relaxed version of MAX SAT, where clauses can essentially be partially satisfied.  Then we use results of the LP to assign the variables using Bernoulli distributions.  It turns out that doing the LP rounding with $1/2$ probability versus uniform rounding with $1/2$ has an expected performance of $3/4$, which is a definitive improvement over the uniform stochastic algorithm that we mentioned.  In this project, we're also interested in investigating the mean and the variance of this algorithm empirically, to see if it would even be feasible in practice.  
+The third algorithm we implemented was actually one that we proved to be an expected $3/4$ approximation to MAX SAT in homework three.  The algorithm essentially took advantage of a linear program to compute a relaxed version of MAX SAT, where clauses can be partially satisfied.  Then we use results of the LP to assign the variables using Bernoulli distributions.  It turns out that doing the LP rounding with $1/2$ probability versus uniform rounding with $1/2$ has an expected performance of $3/4$, which is a definitive improvement over the uniform stochastic algorithm that we mentioned.  In this project, we're also interested in investigating the mean and the variance of this algorithm empirically, to see if it would even be feasible in practice.  
 
 \subsection{(3/4) Deterministic MAX SAT ($detlp\_sat$)}
 
-The fourth algorithm was a deterministic $3/4$ algorithm for MAX SAT developed by Anke van Zuylen \cite{Zuylen}.  This algorithm looks to be a combination of a potential function based heuristic for variables (from Poloczek and Schnitger \cite{PoloczekandSchnitger2011}) and the linear programming technique we had earlier.  To briefly sum it up, we calculate $\alpha = (W_i + F_i - \bar{W_i})/(F_i + \bar{F_i})$.  $W_i$ and $\bar{W_i}$ are the sums of the weight of unsatisfied clauses that contain $x_i$ and $\bar{x_i}$ respectively, but do not contain $x_{i+1},...,x_n$.  $F_i$ and $\bar{F_i}$ are the sums of the weight of all remaining unsatisfied clauses that contain $x_i$ and $\bar{x_i}$ respectively.
+The fourth algorithm was a deterministic $3/4$ algorithm for MAX SAT developed by Anke van Zuylen \cite{Zuylen}.  This algorithm looks to be a combination of a potential function based heuristic for variables (from Poloczek and Schnitger \cite{PoloczekandSchnitger2011}) and the linear programming technique we had earlier.  To briefly sum it up, we calculate $\alpha = (W_i + F_i - \bar{W_i})/(F_i + \bar{F_i})$.  $W_i$ and $\bar{W_i}$ are the sums of the weight of unsatisfied clauses that contain $x_i$ and $\bar{x_i}$ respectively, but do not contain $x_{i+1},...,x_n$.  $F_i$ and $\bar{F_i}$ are the sums of the weight of all remaining unsatisfied clauses that contain $x_i$ and $\bar{x_i}$ respectively.  Then we deterministically set $x_i$ to $1$ if $\alpha\geq1$ or if $\alpha\in (0,1)$ and $q_i^* \geq (1-\alpha)/2\alpha$, where $q_i$ is the solution to the linear program we used in $randlp\_sat$, otherwise we set $x_i$ to $0$.
 
 \subsection{Average Solver MAX SAT ($average\_sat$)}
 
@@ -167,7 +167,7 @@ The first results we look at are across five random sets of data for 3SAT, with 
 \label{rt_heatmap}
 \end{figure}
 
-In figure \ref{rt_heatmap}, we can also see that the greedy save outperforms the other algorithms quite handily.  This is surprising because the greedy algorithm is actually the one with the lowest bound on it's performance in the proof.  This unilateral performance inspired us to try to figure out what is "hard" to this conditionally derandomized algorithm.  Unfortunately the algorithm performed so much better that we were either unable to generate enough data in order to give the neural net enough to go off of or we simply didn't have the resources to run an example with large enough parameters.\\
+In figure \ref{rt_heatmap}, we can also see that the $greedy\_sat$ may actually outperform the other algorithms quite handily.  This is surprising because the greedy algorithm is actually the one with the lowest bound on it's performance in the proof.  This unilateral performance inspired us to try to figure out what is "hard" to this conditionally derandomized algorithm.  Unfortunately the algorithm performed so much better that we were either unable to generate enough data in order to give the neural net enough to go off of or we simply didn't have the resources to run an example with large enough parameters.\\
 
 The second results that we look at are across different values of $k$, since all the previous example were on $k=3$ examples with other parameters varying.  For these varying $k$ values we use a constant number of variables (10) and a varying number of clauses, in order to satisfy this critical clause-to-variables heuristic of $c=(log(2^k/(2^k-1)))^{-1}$.  This critical heuristic was borrowed from: https://toughsat.appspot.com/.\\
 
@@ -186,7 +186,7 @@ The second results that we look at are across different values of $k$, since all
 \label{statistics}
 \end{figure}
 
-In figure \ref{statistics}, we can see that $greedy\_sat$ outperforms the other algorithms pretty handily, but as the value of $k$ increases we their performance begins to converge.  Additionally, for the variance, we might expect the stochastic algorithms to have much higher variance, because the stochasticity of the inputs is compounded by that of the algorithm.  In fact, that doesn't appear to be the case, with $randlp\_sat$, $detlp\_sat$, $average\_sat$ all having quite similar values for variance.  This implies that our random algorithms may actually be sufficient in practice.
+In figure \ref{statistics}, we can see that $greedy\_sat$ outperforms the other algorithms, but as the value of $k$ increases their performance begins to converge.  Additionally, for the variance, we might expect the stochastic algorithms to have much higher variance, because the stochasticity of the inputs is compounded by that of the algorithm.  However, that doesn't appear to be the case, with $randlp\_sat$, $detlp\_sat$, $average\_sat$ all having quite similar values for variance.  This implies that our random algorithms may actually be sufficient in practice.  Additionally, we see that the $average\_sat$ just does worse that the $greedy\_sat$.  Speculatively, if the other three algorithms were competitive with $greedy\_sat$, we may have seen an improvement.
 
 \subsection{Future Work}
 
